labs/Prometheus/Sample pod-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: failing
spec:
  containers:
  - name: nginx
    image: nginx:latest
    command: ["foo"]
