labs/Prometheus/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foo
spec:
  containers:
  - name: nginx
    image: nginx:latest
